# em8300

./: .cvsignore  .dir-locals.el  .hgignore  .hgtags  AUTHORS  ChangeLog  Makefile.am  README  acconfig.h  bootstrap  configure.ac  configure.in  em8300.spec.in  em8300.sysv.in  oms.diff  shinit.sh
autotools/: README
debian/: README  README.debian  changelog  config  control  copyright  do_configure  em8300-modules.control  em8300-modules.devfs.conf  em8300-modules.initd  em8300-modules.postinst  em8300-modules.postrm  em8300-modules.prerm  em8300-modules.substvars  em8300-source.config  em8300-source.control  em8300-source.postinst  em8300-source.postrm  em8300-source.templates  em8300.conf.dist  em8300.config  em8300.control  em8300.postinst  em8300.postrm  em8300.templates  make-tarball.sh  makefile.sh  modules.postinst  postinst  preinst  prerm  rules  setvers.sh  source.control  templates
debian/em8300-source/DEBIAN/: control  postinst  prerm
debian/man/: dxr3view.1
debian/scripts/: upload_microcode.sh
dhc/: .cvsignore  Makefile.am  dhc.desktop  dhc_callback.c  dhc_callback.h  dhc_gui.c  dhc_gui.h  dhc_main.c  pixmaps.h
dxr3snap/: dxr3snap2.c  dxr3write.c  dxr3write2.c
em8300setup/: .cvsignore  Makefile.am  em8300setup.1  em8300setup.c
include/: .cvsignore  Makefile.am
include/libdxr3/: Makefile.am  api.h
include/linux/: Makefile.am  em8300.h
libdxr3/: ChangeLog  Makefile.am  ac3spdif.c  bootstrap  configure.in  dxr3-api.c  dxr3-api.h
libdxr3/libac3/: Makefile.am  ac3.h  ac3_internal.h  bitstream.c  bitstream.h  bswap.h  crc.c  parse.c
m4/: gtk.m4
modules/: .cvsignore  INSTALL  Kbuild  Makefile  Makefile.2.2  Makefile.2.4  README-2.2  README-2.4  README-2.4.0  README-greenscreen  README-modoptions  README-modules.conf  adv717x.c  adv717x.h  adv717x_eeprom.c  adv717x_eeprom.c.old  bt865.c  bt865.h  devfs_symlinks  devices.sh  eeprom.c  em8300-i2c-2.8.0.patch  em8300-udev.permissions  em8300-udev.rules  em8300.h  em8300_alsa.c  em8300_alsa.h  em8300_audio.c  em8300_compat24.h  em8300_devfs.c  em8300_devfs.h  em8300_dicom.c  em8300_driver.h  em8300_eeprom.c  em8300_eeprom.h  em8300_fifo.c  em8300_fifo.h  em8300_i2c.c  em8300_ioctl.c  em8300_ioctl32.c  (+31 more)
omsplugin/: Makefile.am  Makefile.am.plugin  README  bootstrap  plugin-install.sh
omsplugin/dxr3/: Makefile.am  ac3.h  ac3_internal.h  ac3spdif.c  audio_dxr3.c  audio_out_dxr3.c  audio_out_internal.h  codec.c  crc.c  dxr3-api.c  dxr3-api.h  dxr3_ac3.c  dxr3_mpeg2.c  dxr3_spu.c  em8300.h  parse.c  parse.h  plugin.c  video_dxr3.c
overlay/: .cvsignore  Makefile  Makefile.am  allblackbut.c  allblackbut.h  autocal.c  autocal.desktop  autocal.h  dxr3view.c  dxr3view.desktop  overlay.c  overlay.h  plotcal.m
overlay/configs/: README  res_1024x768x16  res_1024x768x24  res_1280x1024x16  res_1280x1024x24
scripts/: .cvsignore  Makefile.am  console.pl  em8300.pm  i2ctest.pl  microcode_extract.pl  microcode_info.pl  microcode_upload.pl  microcode_upload.pl.in  msexpand.pl  parsei2c.pl  replay.pl  replayi2c.pl  softiceparse.pl  symboliclog.pl
xine/: Makefile  README  dxr3_decoder.c  video_out_dxr3.c  xine-lib.diff
