dnl Process this file with autoconf to produce a configure script.
AC_INIT(libdxr3/dxr3-api.c)
AC_PREREQ(2.13)
AC_CONFIG_AUX_DIR(autotools)

EM8300_MAJOR=0
EM8300_MINOR=8
EM8300_SUB=0
EM8300_PRE=".pre1"
TAR_NAME="em8300-"$EM8300_MAJOR.$EM8300_MINOR.$EM8300_SUB$EM8300_PRE
SPEC_VERSION=$EM8300_MAJOR.$EM8300_MINOR.$EM8300_SUB$EM8300_PRE
AC_SUBST(EM8300_MAJOR)
AC_SUBST(EM8300_MINOR)
AC_SUBST(EM8300_SUB)
AC_SUBST(TAR_NAME)
AC_SUBST(SPEC_VERSION)

AM_INIT_AUTOMAKE("em8300", $EM8300_MAJOR.$EM8300_MINOR.$EM8300_SUB$EM8300_PRE)

AC_CANONICAL_HOST
AM_CONFIG_HEADER(include/config.h)

dnl Libtool
AM_PROG_LIBTOOL

BUILD_LIB_STATIC="-static"
AC_SUBST(BUILD_LIB_STATIC)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL

AC_SUBST(DEBUG_CFLAGS)
AC_SUBST(GLOBAL_CFLAGS)

dnl Common cflags for all platforms
COMMON_CFLAGS="-Wall -D_FILE_OFFSET_BITS=64"

GLOBAL_CFLAGS="$GLOBAL_CFLAGS $CFLAGS $COMMON_CFLAGS"
DEBUG_CFLAGS="$GLOBAL_CFLAGS $CFLAGS $COMMON_CFLAGS -DDEBUG"

AC_OUTPUT([
	Makefile
	em8300.spec
	em8300.sysv
	include/Makefile
	include/libdxr3/Makefile
	include/linux/Makefile
	libdxr3/Makefile
	libdxr3/libac3/Makefile
	overlay/Makefile
	dhc/Makefile
	scripts/Makefile
])
