dnl Process this file with autoconf to produce a configure script.
AC_INIT(dxr3-api.c)
AC_PREREQ(2.13)

DXR3_MAJOR=0
DXR3_MINOR=7
DXR3_SUB=0
dnl DXR3_PRE=".pre1"
TAR_NAME="libdxr3-"$DXR3_MAJOR.$DXR3_MINOR.$DXR3_SUB$DXR3_PRE
SPEC_VERSION=$DXR3_MAJOR.$DXR3_MINOR.$DXR3_SUB$DXR3_PRE
AC_SUBST(DXR3_MAJOR)
AC_SUBST(DXR3_MINOR)
AC_SUBST(DXR3_SUB)
AC_SUBST(TAR_NAME)
AC_SUBST(SPEC_VERSION)

AM_INIT_AUTOMAKE("libdxr3", $DXR3_MAJOR.$DXR3_MINOR.$DXR3_SUB$DXR3_PRE)

AC_CANONICAL_HOST
AM_CONFIG_HEADER(config.h)

dnl Libtool
AM_PROG_LIBTOOL

BUILD_LIB_STATIC="-static"
AC_SUBST(BUILD_LIB_STATIC)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_LN_S

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL

AC_SUBST(DEBUG_CFLAGS)
AC_SUBST(GLOBAL_CFLAGS)

dnl Common cflags for all platforms
COMMON_CFLAGS="-Wall -D_FILE_OFFSET_BITS=64"

GLOBAL_CFLAGS="$GLOBAL_CFLAGS $CFLAGS $COMMON_CFLAGS"
DEBUG_CFLAGS="$GLOBAL_CFLAGS $CFLAGS $COMMON_CFLAGS -DDEBUG"

AC_OUTPUT([Makefile libac3/Makefile])
